@@ -1,6 +1,7 @@
 CHANGES
 0.10.15 (January 31, 2023)
 - libgutenberg is not compatible with SQLAlchemy 2.0; added a version restriction
+- in logging tests, clean up the open log file
 - curly quotes in titles are straightened.
 - store subtitle in a marc subfield
 - pubinfo was not being reconstituted when loaded from the database
